[gd_scene load_steps=25 format=3 uid="uid://bco1m6ixdmiil"]

[ext_resource type="Script" path="res://scripts/objects/card.gd" id="1_arv21"]
[ext_resource type="Texture2D" uid="uid://fa7porh7emrp" path="res://assets/images/cards/art/Blue Plains/Creature/Ancient Scholar.png" id="2_h63qs"]
[ext_resource type="Texture2D" uid="uid://ct5331atokkqs" path="res://assets/images/frames/Rainbow_Creature.png" id="3_mw3bc"]
[ext_resource type="Theme" uid="uid://dmwrp6aey18st" path="res://assets/themes/purple_button.tres" id="5_bmwov"]
[ext_resource type="FontFile" uid="uid://ca0g1l1k6v1sf" path="res://assets/fonts/Pendlefont Heavy.TTF" id="5_bysvj"]
[ext_resource type="PackedScene" uid="uid://qga2y5wh6ftv" path="res://scenes/components/drag_component.tscn" id="6_457fh"]
[ext_resource type="Texture2D" uid="uid://dsuwmnh6sbhed" path="res://assets/images/cards/card_back/back.png" id="6_uokre"]
[ext_resource type="AudioStream" uid="uid://cy7urpyd5dqi5" path="res://assets/sounds/CardMove.wav" id="8_iocnt"]
[ext_resource type="PackedScene" uid="uid://de57x6w0o023y" path="res://scenes/components/floop_component.tscn" id="9_1g6dh"]
[ext_resource type="Script" path="res://scripts/states/state_mashine.gd" id="10_rn6ks"]
[ext_resource type="Script" path="res://scripts/states/in_deck.gd" id="11_h3v8y"]
[ext_resource type="Script" path="res://scripts/states/in_hand.gd" id="12_uil7g"]
[ext_resource type="Script" path="res://scripts/states/in_play.gd" id="13_e3wur"]
[ext_resource type="Script" path="res://scripts/states/discarded.gd" id="14_x832o"]
[ext_resource type="Script" path="res://scripts/states/dragging.gd" id="15_smlb4"]
[ext_resource type="Script" path="res://scripts/states/overlapping.gd" id="16_eswy8"]
[ext_resource type="Script" path="res://scripts/states/hovering.gd" id="16_psrjk"]

[sub_resource type="Animation" id="Animation_0kbrg"]
length = 0.001

[sub_resource type="Animation" id="Animation_djqq5"]
resource_name = "flip_down"
length = 0.3
step = 0.005
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SubViewportContainer/SubViewport/CardBack:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.14),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SubViewportContainer/SubViewport/CardBack:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.14, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 0.896), Vector2(0.896, 0.896)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SubViewportContainer/SubViewport/PanelContainer:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.14),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SubViewportContainer/SubViewport/Labels:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.14),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 1)]
}

[sub_resource type="Animation" id="Animation_ljt8f"]
resource_name = "flip_up"
length = 0.3
step = 0.005
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SubViewportContainer/SubViewport/CardBack:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.14),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SubViewportContainer/SubViewport/CardBack:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.14),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.896, 0.896), Vector2(1e-05, 0.896)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SubViewportContainer/SubViewport/PanelContainer:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.14, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 1), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SubViewportContainer/SubViewport/Labels:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.14, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_swdfb"]
_data = {
"RESET": SubResource("Animation_0kbrg"),
"flip_down": SubResource("Animation_djqq5"),
"flip_up": SubResource("Animation_ljt8f")
}

[sub_resource type="Theme" id="Theme_rcflo"]
default_font = ExtResource("5_bysvj")
Label/colors/font_color = Color(0.129412, 0.141176, 0.160784, 1)
Label/font_sizes/font_size = 78

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4b713"]
size = Vector2(376, 928)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_os2xy"]
size = Vector2(376, 928)

[node name="Card" type="Control"]
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
script = ExtResource("1_arv21")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
offset_left = -346.5
offset_top = -490.0
offset_right = 346.5
offset_bottom = 490.0
pivot_offset = Vector2(346.75, 490)
size_flags_horizontal = 4
size_flags_vertical = 4
metadata/_edit_use_anchors_ = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
unique_name_in_owner = true
disable_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(693, 980)
render_target_update_mode = 4

[node name="PanelContainer" type="PanelContainer" parent="SubViewportContainer/SubViewport"]
scale = Vector2(1e-05, 1)

[node name="CardImage" type="Sprite2D" parent="SubViewportContainer/SubViewport/PanelContainer"]
unique_name_in_owner = true
position = Vector2(26, 0)
scale = Vector2(1.25391, 1.25391)
centered = false

[node name="TextureRect" type="TextureRect" parent="SubViewportContainer/SubViewport/PanelContainer"]
layout_mode = 2
texture = ExtResource("2_h63qs")
expand_mode = 2

[node name="CardFrame" type="Sprite2D" parent="SubViewportContainer/SubViewport/PanelContainer"]
unique_name_in_owner = true
position = Vector2(2.38419e-07, 0)
texture = ExtResource("3_mw3bc")
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="SubViewportContainer/SubViewport/PanelContainer"]
unique_name_in_owner = true
root_node = NodePath("../../../..")
libraries = {
"": SubResource("AnimationLibrary_swdfb")
}

[node name="CardBack" type="Sprite2D" parent="SubViewportContainer/SubViewport"]
unique_name_in_owner = true
scale = Vector2(0.896, 0.896)
texture = ExtResource("6_uokre")
offset = Vector2(385.655, 540.96)

[node name="Labels" type="Control" parent="SubViewportContainer/SubViewport"]
layout_mode = 3
anchors_preset = 0
scale = Vector2(1e-05, 1)

[node name="CardName" type="Label" parent="SubViewportContainer/SubViewport/Labels"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 190.667
offset_top = 24.8333
offset_right = 561.667
offset_bottom = 100.833
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_rcflo")
theme_override_font_sizes/font_size = 45
text = "Card Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LandscapeCardType" type="Label" parent="SubViewportContainer/SubViewport/Labels"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 25.0
offset_top = 575.0
offset_right = 668.0
offset_bottom = 658.0
theme = SubResource("Theme_rcflo")
theme_override_fonts/font = ExtResource("5_bysvj")
theme_override_font_sizes/font_size = 45
text = "Landscape / Card Type"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="Label" parent="SubViewportContainer/SubViewport/Labels"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 37.0
offset_top = 660.0
offset_right = 659.0
offset_bottom = 864.0
theme = ExtResource("5_bmwov")
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 32
text = "FLOOP >>> In this space, find the card's description and effects."
horizontal_alignment = 1
autowrap_mode = 2

[node name="CCAttack" type="CenterContainer" parent="SubViewportContainer/SubViewport/Labels"]
layout_mode = 0
offset_left = 26.6667
offset_top = 833.667
offset_right = 114.667
offset_bottom = 1002.67

[node name="AttackLabel" type="Label" parent="SubViewportContainer/SubViewport/Labels/CCAttack"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme = SubResource("Theme_rcflo")
theme_override_font_sizes/font_size = 78
text = "A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CCDefense" type="CenterContainer" parent="SubViewportContainer/SubViewport/Labels"]
layout_mode = 0
offset_left = 582.629
offset_top = 833.667
offset_right = 670.629
offset_bottom = 1002.67

[node name="DefenseLabel" type="Label" parent="SubViewportContainer/SubViewport/Labels/CCDefense"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme = SubResource("Theme_rcflo")
theme_override_font_sizes/font_size = 78
text = "D"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CostLabel" type="Label" parent="SubViewportContainer/SubViewport/Labels"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 0
offset_left = 47.1827
offset_top = 10.6667
offset_right = 167.183
offset_bottom = 200.667
size_flags_horizontal = 0
size_flags_vertical = 0
theme = SubResource("Theme_rcflo")
theme_override_font_sizes/font_size = 106
text = "C"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="drag_component" parent="." instance=ExtResource("6_457fh")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="drag_component"]
shape = SubResource("RectangleShape2D_4b713")

[node name="card_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_iocnt")

[node name="floop_component" parent="." instance=ExtResource("9_1g6dh")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="floop_component"]
shape = SubResource("RectangleShape2D_os2xy")

[node name="state_mashine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("10_rn6ks")
initial_state = NodePath("in_deck")

[node name="in_deck" type="Node" parent="state_mashine"]
script = ExtResource("11_h3v8y")

[node name="in_hand" type="Node" parent="state_mashine"]
script = ExtResource("12_uil7g")

[node name="in_play" type="Node" parent="state_mashine" node_paths=PackedStringArray("card_sound")]
script = ExtResource("13_e3wur")
card_sound = NodePath("../../card_sound")

[node name="discarded" type="Node" parent="state_mashine"]
script = ExtResource("14_x832o")

[node name="dragging" type="Node" parent="state_mashine"]
script = ExtResource("15_smlb4")

[node name="hovering" type="Node" parent="state_mashine"]
script = ExtResource("16_psrjk")

[node name="overlapping" type="Node" parent="state_mashine"]
script = ExtResource("16_eswy8")

[connection signal="body_exited" from="drag_component" to="." method="_on_drag_component_body_exited"]
[connection signal="mouse_exited" from="drag_component" to="state_mashine/hovering" method="_on_drag_component_mouse_exited"]
